--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,122 @@
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <a href="./index.html">
+                <p><span>Web</span>Studio</p>
+            </a>
+            <ul>
+                <li>
+                    <a href="">Студия</a>
+                </li>
+                <li>
+                    <a href="">Портфолио</a>
+                </li>
+                <li>
+                    <a href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </header>
+    <main>
+        <sectiom>
+            <h1>эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услуги</button>
+        </sectiom>
+        <sectiom>
+            <ul>
+                <li>
+                    <h2>внимание к деталям</h2>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию
+                        позиций.</p>
+                </li>
+                <li>
+                    <h2>пунктуальность</h2>
+                    <p>Задача организации, в особенности же рамкии место обучения кадров влечет за
+                        собой.</p>
+                </li>
+                <li>
+                    <h2>планирование</h2>
+                    <p>Равным обаразом консультация с широким активом в значительной степени
+                        обусловливает.</p>
+                </li>
+                <li>
+                    <h2>современные технологии</h2>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                    </p>
+                </li>
+            </ul>
+        </sectiom>
+        <sectiom>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/services/code_generation.png"
+                        alt="создание качественного кода" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/services/testing.png" alt="тестирование продукта" width="370"
+                        height="294">
+                </li>
+                <li>
+                    <img src="./images/services/design.png" alt="дизайн продукта" width="370"
+                        height="294">
+                </li>
+            </ul>
+        </sectiom>
+        <sectiom>
+            <h2>наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/team/igor_demyanenko.jpg"
+                        alt="на фото изображен Игорь Демьяненко" width="270" height="260">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team/olga_repina.jpg" alt="на фото изображена Ольга Репина"
+                        width="270" height="260">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team/nikolay_tarasov.jpg"
+                        alt="на фото изображен Николай Тарасов" width="270" height="260">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team/mikhail_ermakov.jpg"
+                        alt=" на фото изображен Михаил Ермаков" width="270" height="260">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
+        </sectiom>
+    </main>
+    <footer>
+        <a href="./index.html">
+            <p><span>Web</span>Studio</p>
+        </a>
+        <address>
+            <ul>
+                <li>
+                    <a href="https://www.google.com.ua/maps/search/+++++++++++++++++%D0%BA%D0%B8%D0%B5%D0%B2+%D0%BF%D1%80+%D0%BB%D0%B5%D1%81%D0%B8+%D1%83%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8+26/@50.4685903,30.4310823,12.25z?hl=ru"
+                        target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки,
+                        26</a>
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </footer>
 </body>
 
 </html>
