--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-        <sectiom>
+        <section>
             <h1>эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услуги</button>
-        </sectiom>
-        <sectiom>
+        </section>
+        <section>
             <ul>
                 <li>
                     <h2>внимание к деталям</h2>
@@ -57,8 +57,8 @@
                     </p>
                 </li>
             </ul>
-        </sectiom>
-        <sectiom>
+        </section>
+        <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
@@ -74,8 +74,8 @@
                         height="294">
                 </li>
             </ul>
-        </sectiom>
-        <sectiom>
+        </section>
+        <section>
             <h2>наша команда</h2>
             <ul>
                 <li>
@@ -103,7 +103,7 @@
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
-        </sectiom>
+        </section>
     </main>
     <footer>
         <a href="./index.html">
