--- a/index.html
+++ b/index.html
@@ -35,24 +35,25 @@
             <button type="button">Заказать услуги</button>
         </section>
         <section>
+            <h2 hidden>наши правила</h2>
             <ul>
                 <li>
-                    <h2>внимание к деталям</h2>
+                    <h3>внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию
                         позиций.</p>
                 </li>
                 <li>
-                    <h2>пунктуальность</h2>
+                    <h3>пунктуальность</h3>
                     <p>Задача организации, в особенности же рамкии место обучения кадров влечет за
                         собой.</p>
                 </li>
                 <li>
-                    <h2>планирование</h2>
+                    <h3>планирование</h3>
                     <p>Равным обаразом консультация с широким активом в значительной степени
                         обусловливает.</p>
                 </li>
                 <li>
-                    <h2>современные технологии</h2>
+                    <h3>современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
