work with pictchers

--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/services/code_generation.png"
+                    <img src="./images/services/code_generation.jpg"
                         alt="создание качественного кода" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/services/testing.png" alt="тестирование продукта" width="370"
+                    <img src="./images/services/testing.jpg" alt="тестирование продукта" width="370"
                         height="294">
                 </li>
                 <li>
-                    <img src="./images/services/design.png" alt="дизайн продукта" width="370"
+                    <img src="./images/services/design.jpg" alt="дизайн продукта" width="370"
                         height="294">
                 </li>
             </ul>
