--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">
-                <p><span>Web</span>Studio</p>
-            </a>
+            <a href="./index.html"><span>Web</span>Studio</a>
             <ul>
                 <li>
                     <a href="">Студия</a>
@@ -26,8 +24,14 @@
                 </li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
     </header>
     <main>
         <section>
@@ -107,14 +111,12 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">
-            <p><span>Web</span>Studio</p>
-        </a>
+        <a href="./index.html"><span>Web</span>Studio</a>
         <address>
             <ul>
                 <li>
-                    <a href="https://www.google.com.ua/maps/search/+++++++++++++++++%D0%BA%D0%B8%D0%B5%D0%B2+%D0%BF%D1%80+%D0%BB%D0%B5%D1%81%D0%B8+%D1%83%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8+26/@50.4685903,30.4310823,12.25z?hl=ru"
-                        target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки,
+                    <a href="https://goo.gl/maps/VWeCkP8QHwiz3aNE8" target="_blank"
+                        rel="noopener noreferrer">г. Киев, пр-т Леси Украинки,
                         26</a>
                 </li>
                 <li>
