--- a/index.html
+++ b/index.html
@@ -1,133 +1,162 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <a href="./index.html"><span>Web</span>Studio</a>
-            <ul>
-                <li>
-                    <a href="">Студия</a>
-                </li>
-                <li>
-                    <a href="">Портфолио</a>
-                </li>
-                <li>
-                    <a href="">Контакты</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="./index.html"><span>Web</span>Studio</a>
         <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
+          <li>
+            <a href="">Студия</a>
+          </li>
+          <li>
+            <a href="">Портфолио</a>
+          </li>
+          <li>
+            <a href="">Контакты</a>
+          </li>
         </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <main>
-        <section>
-            <h1>эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услуги</button>
-        </section>
-        <section>
-            <h2 hidden>наши правила</h2>
-            <ul>
-                <li>
-                    <h3>внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию
-                        позиций.</p>
-                </li>
-                <li>
-                    <h3>пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамкии место обучения кадров влечет за
-                        собой.</p>
-                </li>
-                <li>
-                    <h3>планирование</h3>
-                    <p>Равным обаразом консультация с широким активом в значительной степени
-                        обусловливает.</p>
-                </li>
-                <li>
-                    <h3>современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <img src="./images/services/code_generation.jpg"
-                        alt="создание качественного кода" width="370" height="294">
-                </li>
-                <li>
-                    <img src="./images/services/testing.jpg" alt="тестирование продукта" width="370"
-                        height="294">
-                </li>
-                <li>
-                    <img src="./images/services/design.jpg" alt="дизайн продукта" width="370"
-                        height="294">
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/team/igor_demyanenko.jpg"
-                        alt="на фото изображен Игорь Демьяненко" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/team/olga_repina.jpg" alt="на фото изображена Ольга Репина"
-                        width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/team/nikolay_tarasov.jpg"
-                        alt="на фото изображен Николай Тарасов" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/team/mikhail_ermakov.jpg"
-                        alt=" на фото изображен Михаил Ермаков" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+      <section>
+        <h1>эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услуги</button>
+      </section>
+      <section>
+        <h2 hidden>наши правила</h2>
+        <ul>
+          <li>
+            <h3>внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиций.</p>
+          </li>
+          <li>
+            <h3>пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамкии место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>планирование</h3>
+            <p>
+              Равным обаразом консультация с широким активом в значительной степени обусловливает.
+            </p>
+          </li>
+          <li>
+            <h3>современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/services/code_generation.jpg"
+              alt="создание качественного кода"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/services/testing.jpg"
+              alt="тестирование продукта"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/services/design.jpg"
+              alt="дизайн продукта"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team/igor_demyanenko.jpg"
+              alt="на фото изображен Игорь Демьяненко"
+              width="270"
+              height="260"
+            />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/olga_repina.jpg"
+              alt="на фото изображена Ольга Репина"
+              width="270"
+              height="260"
+            />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/nikolay_tarasov.jpg"
+              alt="на фото изображен Николай Тарасов"
+              width="270"
+              height="260"
+            />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/mikhail_ermakov.jpg"
+              alt=" на фото изображен Михаил Ермаков"
+              width="270"
+              height="260"
+            />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
-        <address>
-            <ul>
-                <li>
-                    <a href="https://goo.gl/maps/VWeCkP8QHwiz3aNE8" target="_blank"
-                        rel="noopener noreferrer">г. Киев, пр-т Леси Украинки,
-                        26</a>
-                </li>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+      <a href="./index.html"><span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/VWeCkP8QHwiz3aNE8"
+              target="_blank"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
-</body>
-
+  </body>
 </html>
